# FraudWatch

./: .dockerignore  .editorconfig  CHANGELOG.md  CONTRIBUTING.md  FRONTEND_SETUP.md  LICENSE  README.md  gen.py  package-lock.json  pyproject.toml  strip_comments.py  validate_orm.py  verify_database.py  verify_fraud_domain.py  verify_fraud_models.py  verify_ml_models.py
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  SEEDER_GUIDE.md  alembic.ini  comprehensive_orm_validation.py  mypy_report.txt  orm_validation_output.txt  orm_validation_report.txt  pyproject.toml  requirements-lock.txt  requirements.txt  test_http_register.py  test_register_flow.py  test_registration_direct.py  trace_registration.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_fix_user_password_column.py  (+5 more)
backend/app/: __init__.py  main.py
backend/docs/: DEVELOPMENT_ENVIRONMENT.md
backend/fraudwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: validate_environment.py
backend/seed/: __init__.py  base.py  runner.py  utils.py
backend/tests/: conftest.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  ML_PIPELINE.md  SYSTEM_ARCHITECTURE.md  TROUBLESHOOTING.md
docs/architecture/: celery-architecture.md  database-architecture.md  identity-domain-summary.md  phase5-implementation-roadmap.md
docs/database/: database-setup.md  migration-workflow.md  schema-versioning.md
ml/: __init__.py  pyproject.toml
ml/deployment/: __init__.py  deployment_manager.py
ml/evaluation/: evaluator.py
ml/feature_engineering/: __init__.py  customer_features.py  device_features.py  features.py  merchant_features.py  preprocessor.py  transaction_features.py  velocity_features.py
ml/fraudwatch_ml.egg-info/: PKG-INFO  requires.txt
ml/inference/: __init__.py  model_loader.py
ml/rules/: __init__.py  base_rule.py  blacklist_rules.py  device_rules.py  high_amount_rule.py  merchant_rules.py  risk_rules.py  rule_engine.py  rule_loader.py  rule_registry.py  temporal_rules.py  transaction_pattern_rules.py  velocity_rules.py
ml/tracking/: experiment_tracker.py
ml/training/: __init__.py  dataset_builder.py  trainer.py
scripts/: init-db.sql
(+137 files in other folders)
