[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudwatch-ml"
version = "1.0.0"
description = "FraudWatch Machine Learning Layer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FraudWatch Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["ml", "ml.feature_engineering", "ml.models", "ml.rules", "ml.training", "ml.evaluation", "ml.inference", "ml.deployment"]

[tool.setuptools.package-data]
ml = ["*.py", "artifacts/*.pkl", "artifacts/*.joblib"]
